--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>React test</title>
+    <meta name="viewport" content="initial-scale=1.0">    
   </head>
   <body>
     <div id="app">
