--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
     <title>React test</title>
     <meta name="viewport" content="initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.light_blue-orange.min.css" />
   </head>
   <body>
     <div id="app">
